add auth screens

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,5 +1,20 @@
-<ion-header>
-  <p>
-    login works!
-  </p>
-</ion-header>
+<app-back-button></app-back-button>
+<ion-content>
+  <div class="auth-logo-wrapper">
+    <app-logo></app-logo>
+  </div>
+  <div class="center">
+    <section class="form-content">
+      <div class="title-wrapper">
+        <h2 class="form-title form-title-wrapper">ВХОД</h2>
+      </div>
+      <div class="input-wrapper">
+        <ion-input class="form-input mb-2_25 form-input-wrapper" placeholder="Почта"></ion-input>
+        <ion-input type="password" class="form-input mb-2_25" placeholder="Пароль"></ion-input>
+      </div>
+      <div class="button-wrapper">
+        <ion-button class="form-button form-button-wrapper">Войти</ion-button>
+      </div>
+    </section>
+  </div>
+</ion-content>
