--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,12 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+:root {
+  ion-content {
+    --ion-background-color: var(--background-color);
+  }
+}
+.ion-page {
+  background: var(--background-color);
+}
