--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -8,12 +8,12 @@
       <div class="title-wrapper">
         <h2 class="form-title form-title-wrapper">ВХОД</h2>
       </div>
-      <div class="input-wrapper">
-        <ion-input class="form-input mb-2_25 form-input-wrapper" placeholder="Почта"></ion-input>
-        <ion-input type="password" class="form-input mb-2_25" placeholder="Пароль"></ion-input>
+      <div class="input-wrapper" [formGroup]="form">
+        <ion-input class="form-input mb-2_25 form-input-wrapper" placeholder="Почта" formControlName="email"></ion-input>
+        <ion-input type="password" class="form-input mb-2_25" placeholder="Пароль" formControlName="password"></ion-input>
       </div>
       <div class="button-wrapper">
-        <ion-button class="form-button form-button-wrapper">Войти</ion-button>
+        <ion-button [disabled]="!form.valid" class="form-button form-button-wrapper" (click)="login()">Войти</ion-button>
       </div>
     </section>
   </div>
