--- a/src/app/pages/auth/registration/registration.component.html
+++ b/src/app/pages/auth/registration/registration.component.html
@@ -8,13 +8,30 @@
       <div class="title-wrapper">
         <h2 class="form-title form-title-wrapper">ВХОД</h2>
       </div>
-      <div class="input-wrapper">
-        <ion-input class="form-input mb-2_25 form-input-wrapper" placeholder="Почта"></ion-input>
-        <ion-input type="password" class="form-input mb-2_25 form-input-wrapper" placeholder="Пароль"></ion-input>
-        <ion-input type="password" class="form-input mb-2_25" placeholder="Повтор пароля"></ion-input>
+      <div class="input-wrapper" [formGroup]="form">
+        <ion-input
+          class="form-input mb-2_25 form-input-wrapper"
+          placeholder="Почта"
+          formControlName="email">
+        </ion-input>
+        <ion-input
+          type="password"
+          class="form-input mb-2_25 form-input-wrapper"
+          placeholder="Пароль"
+          formControlName="password">
+        </ion-input>
+        <ion-input
+          type="password"
+          class="form-input mb-2_25"
+          placeholder="Повтор пароля"
+          formControlName="confirmPassword">
+        </ion-input>
       </div>
       <div class="button-wrapper">
-        <ion-button class="form-button form-button-wrapper">Войти</ion-button>
+        <ion-button
+          class="form-button form-button-wrapper"
+          [disabled]="!form.valid"
+          (click)="register()">Войти</ion-button>
       </div>
     </section>
   </div>
