--- a/src/app/pages/auth/initial-page/initial-page.component.html
+++ b/src/app/pages/auth/initial-page/initial-page.component.html
@@ -7,12 +7,12 @@
       <div class="button-wrapper">
         <ion-button (click)="navigate('auth/registration')"
                     class="form-button form-button-wrapper">
-          Зарегистрироватся
+          {{'AUTH.REGISTRATION' | translate}}
         </ion-button>
         <ion-button
           (click)="navigate('auth/login')"
           class="form-button form-button-wrapper">
-          Войти
+          {{'AUTH.LOGIN' | translate}}
         </ion-button>
       </div>
     </section>
