--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -6,14 +6,28 @@
   <div class="center">
     <section class="form-content">
       <div class="title-wrapper">
-        <h2 class="form-title form-title-wrapper">ВХОД</h2>
+        <h2 class="form-title form-title-wrapper">{{'AUTH.LOGIN' | translate}}</h2>
       </div>
       <div class="input-wrapper" [formGroup]="form">
-        <ion-input class="form-input mb-2_25 form-input-wrapper" placeholder="Почта" formControlName="email"></ion-input>
-        <ion-input type="password" class="form-input mb-2_25" placeholder="Пароль" formControlName="password"></ion-input>
+        <ion-input
+          class="form-input mb-2_25 form-input-wrapper"
+          placeholder="{{'AUTH.EMAIL' | translate}}"
+          formControlName="email">
+        </ion-input>
+        <ion-input
+          type="password"
+          class="form-input mb-2_25"
+          placeholder="{{'AUTH.PASSWORD' | translate}}"
+          formControlName="password">
+        </ion-input>
       </div>
       <div class="button-wrapper">
-        <ion-button [disabled]="!form.valid" class="form-button form-button-wrapper" (click)="login()">Войти</ion-button>
+        <ion-button
+          [disabled]="!form.valid"
+          class="form-button form-button-wrapper"
+          (click)="login()">
+          {{'AUTH.SIGN_IN' | translate}}
+        </ion-button>
       </div>
     </section>
   </div>
