--- a/src/app/pages/auth/registration/registration.component.html
+++ b/src/app/pages/auth/registration/registration.component.html
@@ -1,5 +1,5 @@
 <app-back-button></app-back-button>
-<ion-content>
+<ion-content [fullscreen]="true">
   <div class="auth-logo-wrapper">
     <app-logo></app-logo>
   </div>
