add tabs, add icons and app background

--- a/src/theme/default.theme.scss
+++ b/src/theme/default.theme.scss
@@ -24,4 +24,8 @@
   --form-button-background-color: var(--theme-color-step-a200);
 
   --logo-text-color: var(--theme-color-step-a100);
+
+  --ion-tab-bar-background-color: var(--theme-color-step-500);
+  --ion-tab-button-icon-color: #23538F;
+  --ion-active-tab-button-icon-color: white;
 }
