--- a/src/app/pages/workout-history/workout-list/workout-list.component.html
+++ b/src/app/pages/workout-history/workout-list/workout-list.component.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref=".."></ion-back-button>
-    </ion-buttons>
-    <ion-title>Workouts</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true">
+  <app-background>
+  </app-background>
+</ion-content>
