--- a/src/app/pages/workout/exercise/exercise.component.html
+++ b/src/app/pages/workout/exercise/exercise.component.html
@@ -1,53 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Workout</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content>
-  <ion-grid [formGroup]="form">
-    <ion-row *ngIf="exercise">
-      <ion-col size="12" class="text-content">
-        <h2 class="title">{{exercise?.text}}</h2>
-        <p class="sub-title">({{exercise?.category}})</p>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="6">
-        <ion-item>
-          <ion-label position="stacked">Kg</ion-label>
-          <ion-input formControlName="kg" type="tel"></ion-input>
-        </ion-item>
-      </ion-col>
-      <ion-col size="6">
-        <ion-item>
-          <ion-label position="stacked">number of repetitions</ion-label>
-          <ion-input formControlName="numberOfRepetitions" type="tel"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12">
-        <ion-button
-          (click)="addStep()"
-          class="btn"
-          shape="round"
-          fill="outline">
-          Add
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <ion-list>
-    <ion-item *ngFor="let step of steps">
-      <ion-label>
-        <h2>
-          {{step.step}}. {{step.kg}} Kg - number of repetitions: {{step.numberOfRepetitions}}
-        </h2>
-        <p>2022-04-05</p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+<ion-content [fullscreen]="true">
+  <app-background>
+  </app-background>
 </ion-content>
