--- a/src/app/pages/workout/workout-exercises/workout-exercises.component.html
+++ b/src/app/pages/workout/workout-exercises/workout-exercises.component.html
@@ -1,19 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref=".."></ion-back-button>
-    </ion-buttons>
-    <ion-title>Exercises</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content>
-  <ion-list>
-    <ion-item *ngFor="let exercise of exercises" (click)="navigate(exercise.id)">
-      <ion-label>
-        <h2>{{exercise.text}}</h2>
-        <p>{{exercise.category}}</p>
-      </ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
-  </ion-list>
+<ion-content [fullscreen]="true">
+  <app-background>
+  </app-background>
 </ion-content>
