--- a/src/theme/default.theme.scss
+++ b/src/theme/default.theme.scss
@@ -28,4 +28,8 @@
   --ion-tab-bar-background-color: var(--theme-color-step-500);
   --ion-tab-button-icon-color: #23538F;
   --ion-active-tab-button-icon-color: white;
+
+  --app-item-component-content-background: var(--theme-color-step-a700);
+  --app-item-component-icon-background: var(--theme-color-step-a400);
+  --app-background-component-background: var(--theme-color-step-900)
 }
