--- a/src/app/shared/components/background/background.component.html
+++ b/src/app/shared/components/background/background.component.html
@@ -1,5 +1,6 @@
 <div class="content-wrapper">
-  <div class="content-background">
+  <div class="content-background"></div>
+  <div class="content" [ngStyle]="styles">
     <ng-content></ng-content>
   </div>
 </div>
