--- a/src/app/shared/components/background/background.component.scss
+++ b/src/app/shared/components/background/background.component.scss
@@ -1,11 +1,34 @@
 .content-wrapper {
-  height: 100%;
   padding: 2rem 2rem 0 2rem;
 }
 
-.content-background {
-  height: 100%;
-  background: #140741;
+.content-background,
+.content {
+  height: calc(100vh - 56px - 2rem);
   border-radius: 3rem 3rem 0 0;
+}
+
+.content-background {
+  background: var(--app-background-component-background);
+  position: fixed;
+  top: 2rem;
+  left: 1rem;
+  right: 1rem;
+  z-index: 0;
+}
+
+.content {
+  overflow: hidden;
+  overflow-y: auto;
+  position: relative;
   padding: 2rem 1rem 1rem 1rem;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
