--- a/src/theme/default.theme.scss
+++ b/src/theme/default.theme.scss
@@ -31,5 +31,7 @@
 
   --app-item-component-content-background: var(--theme-color-step-a700);
   --app-item-component-icon-background: var(--theme-color-step-a400);
-  --app-background-component-background: var(--theme-color-step-900)
+  --app-background-component-background: var(--theme-color-step-900);
+
+  --app-error-color: red;
 }
