--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -10,11 +10,13 @@
       </div>
       <div class="input-wrapper" [formGroup]="form">
         <ion-input
+          [ngClass]="{'error': isInvalid('email')}"
           class="form-input mb-2_25 form-input-wrapper"
           placeholder="{{'AUTH.EMAIL' | translate}}"
           formControlName="email">
         </ion-input>
         <ion-input
+          [ngClass]="{'error': isInvalid('password')}"
           type="password"
           class="form-input mb-2_25"
           placeholder="{{'AUTH.PASSWORD' | translate}}"
@@ -28,6 +30,11 @@
           (click)="login()">
           {{'AUTH.SIGN_IN' | translate}}
         </ion-button>
+      </div>
+      <div class="form-errors-container" *ngIf="isFormErrors">
+        <div class="error-button" (click)="showWarnings()">
+          <span>{{'AUTH.ERRORS.INFO' | translate}}</span>&nbsp;<ion-badge>{{countFormErrors}}</ion-badge>
+        </div>
       </div>
     </section>
   </div>
