--- a/src/app/pages/auth/shared/components/warning-modal/warning-modal.component.html
+++ b/src/app/pages/auth/shared/components/warning-modal/warning-modal.component.html
@@ -1,24 +1,26 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>Warnings</ion-title>
+    <ion-title>{{'WARNING' | pluralForm: countErrors | translate}}</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="close()">Close</ion-button>
+      <ion-button (click)="close()">{{'CLOSE' | translate}}</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding" *ngIf="formErrors">
   <ion-list *ngIf="formErrors.get('email').length">
-    <ion-list-header>Email warnings:</ion-list-header>
+    <ion-list-header>{{'AUTH.ERRORS.EMAIL_WARNING' | pluralForm: formErrors.get('email').length | translate}}:</ion-list-header>
     <ion-item *ngFor="let emailError of formErrors.get('email')">
       <app-icon slot="start" name="alert-circle-outline"></app-icon>
-      <ion-label class="text">{{emailError | translate}}</ion-label>
+      <ion-label class="text">{{emailError.key | translate}}</ion-label>
     </ion-item>
   </ion-list>
   <ion-list *ngIf="formErrors.get('password').length">
-    <ion-list-header>Password warnings:</ion-list-header>
+    <ion-list-header>{{'AUTH.ERRORS.PASSWORD_WARNING' | pluralForm: formErrors.get('password').length | translate}}:</ion-list-header>
     <ion-item *ngFor="let passwordError of formErrors.get('password')">
       <app-icon slot="start" name="alert-circle-outline"></app-icon>
-      <ion-label class="text">{{passwordError | translate}}</ion-label>
+      <ion-label class="text">
+        {{passwordError.key | translate: { value: passwordError?.value } }}
+      </ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
