--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -33,7 +33,11 @@
       </div>
       <div class="form-errors-container" *ngIf="isFormErrors">
         <div class="error-button" (click)="showWarnings()">
-          <span>{{'AUTH.ERRORS.INFO' | translate}}</span>&nbsp;<ion-badge>{{countFormErrors}}</ion-badge>
+          <span>
+            {{'AUTH.ERRORS.INFO' | pluralForm: countFormErrors | translate}}
+          </span>
+          &nbsp;
+          <ion-badge>{{countFormErrors}}</ion-badge>
         </div>
       </div>
     </section>
