--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -46,6 +46,7 @@
 
 .form-button {
   width: 80%;
+  position: relative;
   --border-radius: 2rem;
   --background: var(--form-button-background-color);
 }
@@ -102,4 +103,9 @@
 .error {
   background: var(--app-error-color);
   opacity: 0.7;
+}
+
+.spinner {
+  position: absolute;
+  right: 0;
 }
