--- a/src/theme/default.theme.scss
+++ b/src/theme/default.theme.scss
@@ -42,4 +42,6 @@
   --app-mpdal-content-title-color: var(--theme-color-step-50);
   --app-modal-content-text-color: var(--theme-color-step-50);
   --app-modal-content-icon-color: var(--theme-color-step-50);
+
+  --app-icon-color: var(--theme-color-step-a700);
 }
