--- a/src/app/pages/auth/registration/registration.component.html
+++ b/src/app/pages/auth/registration/registration.component.html
@@ -19,17 +19,25 @@
         </ion-input>
         <ion-input
           [ngClass]="{'error': isInvalid('password')}"
-          type="password"
+          clear-on-edit="false"
+          [type]="isSeePassword ? 'text' : 'password'"
           class="form-input mb-2_25 form-input-wrapper"
           placeholder="{{'AUTH.PASSWORD' | translate}}"
           formControlName="password">
+          <ion-button class="eye" fill="clear" (click)="togglePassword('password')">
+            <app-icon class="eye-icon" [name]="isSeePassword ? 'eye-outline' : 'eye-off-outline'"></app-icon>
+          </ion-button>
         </ion-input>
         <ion-input
           [ngClass]="{'error': isInvalid('confirmPassword')}"
-          type="password"
+          clear-on-edit="false"
+          [type]="isSeeConfirmPassword ? 'text' : 'password'"
           class="form-input mb-2_25"
           placeholder="{{'AUTH.REPEAT_PASSWORD' | translate}}"
           formControlName="confirmPassword">
+          <ion-button class="eye" fill="clear" (click)="togglePassword('confirmPassword')">
+            <app-icon class="eye-icon" [name]="isSeeConfirmPassword ? 'eye-outline' : 'eye-off-outline'"></app-icon>
+          </ion-button>
         </ion-input>
       </div>
       <div class="button-wrapper">
