--- a/src/theme/default.theme.scss
+++ b/src/theme/default.theme.scss
@@ -44,4 +44,7 @@
   --app-modal-content-icon-color: var(--theme-color-step-50);
 
   --app-icon-color: var(--theme-color-step-a700);
+
+  --app-toast-background: var(--theme-color-step-900);
+  --app-toast-color: var(--theme-white-color);
 }
