--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -110,10 +110,9 @@
   right: 0;
 }
 
-.eye {
-  order: 1;
-}
-
 .eye-icon {
+  display: flex;
+  order: 1;
   color: var(--app-icon-color);
+  padding-right: 0.3rem;
 }
