--- a/src/app/pages/auth/initial-page/initial-page.component.html
+++ b/src/app/pages/auth/initial-page/initial-page.component.html
@@ -17,4 +17,9 @@
       </div>
     </section>
   </div>
+
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <app-select-language isShort="true"></app-select-language>
+  </ion-fab>
 </ion-content>
