--- a/src/theme/default.theme.scss
+++ b/src/theme/default.theme.scss
@@ -47,4 +47,15 @@
 
   --app-toast-background: var(--theme-color-step-900);
   --app-toast-color: var(--theme-white-color);
+
+  --app-action-sheet-background: var(--theme-color-step-500);
+  --app-action-sheet-button-color: var(--theme-white-color);
+  --app-action-sheet-ion-background-color: var(--theme-color-step-600);
+  --app-action-sheet-title-color: var(--theme-white-color);
+  --app-action-sheet-active-button-background: var(--theme-color-step-600);
+
+  --app-avatar-background: var(--theme-color-step-500);
+  --app-avatar-color: var(--theme-white-color);
+
+  --app-title-color: var( --theme-white-color);
 }
