change text for languages

--- a/src/app/pages/account/user-profile/user-profile.component.html
+++ b/src/app/pages/account/user-profile/user-profile.component.html
@@ -5,7 +5,7 @@
     </section>
 
     <section class="language-wrapper">
-      <h1 class="title">Language:</h1>
+      <h1 class="title">{{'LANGUAGE.SINGULAR' | translate}}</h1>
       <app-select-language></app-select-language>
     </section>
 
